--- a/FilterReview/index.html
+++ b/FilterReview/index.html
@@ -6,7 +6,7 @@
 <script src='https://cdn.plot.ly/plotly-2.20.0.min.js'></script>
 <script src="https://unpkg.com/mathjs/lib/browser/math.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest"> </script>
-<script type="text/javascript" src="parser.js"></script>
+<script type="text/javascript" src="../JsDataflashParser/parser.js"></script>
 <script type="text/javascript" src="DecodeDevID.js"></script>
 
 </head>
