Add and use local logo

--- a/FilterReview/index.html
+++ b/FilterReview/index.html
@@ -10,7 +10,7 @@
 <script type="text/javascript" src="DecodeDevID.js"></script>
 
 </head>
-<a href="https://ardupilot.org"><img src="logo.png"></a>
+<a href="https://ardupilot.org"><img src="../images/ArduPilot.png"></a>
 <h1>ArduPilot Filter Review Tool</h1>
 
 <body>
