--- a/FilterTool/index.html
+++ b/FilterTool/index.html
@@ -10,7 +10,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
 <script src="https://www.lactame.com/lib/ml/6.0.0/ml.min.js"></script>
 </head>
-<a href="https://ardupilot.org"><img src="logo.png"></a>
+<a href="https://ardupilot.org"><img src="../images/ArduPilot.png"></a>
 <h1>ArduPilot Filter Analysis</h1>
 
 The following form will display the attenuation and phase lag for an
