FilterReview: combine spectrum and amplitude scale to just give linear, dB and PSD

--- a/FilterReview/index.html
+++ b/FilterReview/index.html
@@ -36,21 +36,14 @@
     <table>
         <tr>
             <td>
-                <fieldset style="width:150px;height:80px">
+                <fieldset style="width:180px;height:80px">
                     <legend>Amplitude scale</legend>
-                    <input type="radio" id="ScaleLog" name="Scale" checked>
-                    <label for="LogScale">dB</label><br>
                     <input type="radio" id="ScaleLinear" name="Scale">
-                    <label for="LinearScale">Linear</label><br>
-                </fieldset>
-            </td>
-            <td>
-                <fieldset style="width:200px;height:80px">
-                    <legend>Spectrum scale</legend>
-                    <input type="radio" id="SpectrumLinear" name="SpectrumScale" checked>
-                    <label for="SpectrumLinear">Linear</label><br>
-                    <input type="radio" id="SpectrumPSD" name="SpectrumScale">
-                    <label for="SpectrumPSD">Power Spectral Density</label><br>
+                    <label for="ScaleLinear">Linear</label><br>
+                    <input type="radio" id="ScaleLog" name="Scale" checked>
+                    <label for="ScaleLog">dB</label><br>
+                    <input type="radio" id="ScalePSD" name="Scale">
+                    <label for="ScalePSD">Power Spectral Density</label><br>
                 </fieldset>
             </td>
             <td>
