--- a/FilterReview/index.html
+++ b/FilterReview/index.html
@@ -262,6 +262,13 @@
     </tr>
 </table>
 
+<p>
+    <div id="BodeAmp" style="width:1200px;height:450px"></div>
+</p>
+<p>
+    <div id="BodePhase" style="width:1200px;height:450px"></div>
+</p>
+
 <table>
 <tr>
 <td style="width: 60px;"></td>
@@ -270,49 +277,49 @@
     <legend>Gyro filter</legend>
     <p>
         <label class="parameter_input_label" for="INS_GYRO_FILTER">INS_GYRO_FILTER</label>
-        <input id="INS_GYRO_FILTER" name="INS_GYRO_FILTER" type="number" step="0.1" value="20.0" onchange="filter_param_read(); redraw_Spectrogram();" style="width: 100px"/>
+        <input id="INS_GYRO_FILTER" name="INS_GYRO_FILTER" type="number" step="0.1" value="20.0" onchange="filter_param_change();" style="width: 100px"/>
     </p>
 </fieldset>
 <fieldset style="width:1070px">
     <legend>First Notch Filter</legend>
     <p>
         <label class="parameter_input_label" for="INS_HNTCH_ENABLE">INS_HNTCH_ENABLE</label>
-        <input id="INS_HNTCH_ENABLE" name="INS_HNTCH_ENABLE" type="number" step="1" value="0" onchange="filter_param_read(); redraw_Spectrogram();" style="width: 100px"/>
+        <input id="INS_HNTCH_ENABLE" name="INS_HNTCH_ENABLE" type="number" step="1" value="0" onchange="filter_param_change();" style="width: 100px"/>
         <label id="INS_HNTCH_ENABLE.doc"></label>
     </p>
     <p>
         <label class="parameter_input_label" for="INS_HNTCH_MODE">INS_HNTCH_MODE</label>
-        <input id="INS_HNTCH_MODE" name="INS_HNTCH_MODE" type="number" step="1" value="0" onchange="filter_param_read(); redraw_Spectrogram();" style="width: 100px" disabled/>
+        <input id="INS_HNTCH_MODE" name="INS_HNTCH_MODE" type="number" step="1" value="0" onchange="filter_param_change();" style="width: 100px" disabled/>
         <label id="INS_HNTCH_MODE.doc"></label>
     </p>
     <p>
         <label class="parameter_input_label" for="INS_HNTCH_FREQ">INS_HNTCH_FREQ</label>
-        <input id="INS_HNTCH_FREQ" name="INS_HNTCH_FREQ" type="number" step="0.1" value="0" onchange="filter_param_read(); redraw_Spectrogram();" style="width: 100px" disabled/>
+        <input id="INS_HNTCH_FREQ" name="INS_HNTCH_FREQ" type="number" step="0.1" value="0" onchange="filter_param_change();" style="width: 100px" disabled/>
     </p>
     <p>
         <label class="parameter_input_label" for="INS_HNTCH_BW">INS_HNTCH_BW</label>
-        <input id="INS_HNTCH_BW" name="INS_HNTCH_BW" type="number" step="0.1" value="0" onchange="filter_param_read(); redraw_Spectrogram();" style="width: 100px" disabled/>
+        <input id="INS_HNTCH_BW" name="INS_HNTCH_BW" type="number" step="0.1" value="0" onchange="filter_param_change();" style="width: 100px" disabled/>
     </p>
     <p>
         <label class="parameter_input_label" for="INS_HNTCH_ATT">INS_HNTCH_ATT</label>
-        <input id="INS_HNTCH_ATT" name="INS_HNTCH_ATT" type="number" step="0.1" value="0" onchange="filter_param_read(); redraw_Spectrogram();" style="width: 100px" disabled/>
+        <input id="INS_HNTCH_ATT" name="INS_HNTCH_ATT" type="number" step="0.1" value="0" onchange="filter_param_change();" style="width: 100px" disabled/>
     </p>
     <p>
         <label class="parameter_input_label" for="INS_HNTCH_REF">INS_HNTCH_REF</label>
-        <input id="INS_HNTCH_REF" name="INS_HNTCH_REF" type="number" step="0.01" value="0" onchange="filter_param_read(); redraw_Spectrogram();" style="width: 100px" disabled/>
+        <input id="INS_HNTCH_REF" name="INS_HNTCH_REF" type="number" step="0.01" value="0" onchange="filter_param_change();" style="width: 100px" disabled/>
     </p>
     <p>
         <label class="parameter_input_label" for="INS_HNTCH_FM_RAT">INS_HNTCH_FM_RAT</label>
-        <input id="INS_HNTCH_FM_RAT" name="INS_HNTCH_FM_RAT" type="number" step="0.01" value="1.0" onchange="filter_param_read(); redraw_Spectrogram();" style="width: 100px" disabled/>
+        <input id="INS_HNTCH_FM_RAT" name="INS_HNTCH_FM_RAT" type="number" step="0.01" value="1.0" onchange="filter_param_change();" style="width: 100px" disabled/>
     </p>
     <p>
         <label class="parameter_input_label" for="INS_HNTCH_HMNCS">INS_HNTCH_HMNCS</label>
-        <input id="INS_HNTCH_HMNCS" name="INS_HNTCH_HMNCS" type="number" step="1" value="1" onchange="filter_param_read(); redraw_Spectrogram();" style="width: 100px" disabled/>
+        <input id="INS_HNTCH_HMNCS" name="INS_HNTCH_HMNCS" type="number" step="1" value="1" onchange="filter_param_change();" style="width: 100px" disabled/>
         <label id="INS_HNTCH_HMNCS.doc"></label>
     </p>
     <p>
         <label class="parameter_input_label" for="INS_HNTCH_OPTS">INS_HNTCH_OPTS</label>
-        <input id="INS_HNTCH_OPTS" name="INS_HNTCH_OPTS" type="number" step="1" value="0" onchange="filter_param_read(); redraw_Spectrogram();" style="width: 100px" disabled/>
+        <input id="INS_HNTCH_OPTS" name="INS_HNTCH_OPTS" type="number" step="1" value="0" onchange="filter_param_change();" style="width: 100px" disabled/>
         <label id="INS_HNTCH_OPTS.doc"></label>
     </p>
 </fieldset>
@@ -320,42 +327,42 @@
     <legend>Second Notch Filter</legend>
     <p>
         <label class="parameter_input_label" for="INS_HNTC2_ENABLE">INS_HNTC2_ENABLE</label>
-        <input id="INS_HNTC2_ENABLE" name="INS_HNTC2_ENABLE" type="number" step="1" value="0" onchange="filter_param_read(); redraw_Spectrogram();" style="width: 100px"/>
+        <input id="INS_HNTC2_ENABLE" name="INS_HNTC2_ENABLE" type="number" step="1" value="0" onchange="filter_param_change();" style="width: 100px"/>
         <label id="INS_HNTC2_ENABLE.doc"></label>
     </p>
     <p>
         <label class="parameter_input_label" for="INS_HNTC2_MODE">INS_HNTC2_MODE</label>
-        <input id="INS_HNTC2_MODE" name="INS_HNTC2_MODE" type="number" step="1" value="0" onchange="filter_param_read(); redraw_Spectrogram();" style="width: 100px" disabled/>
+        <input id="INS_HNTC2_MODE" name="INS_HNTC2_MODE" type="number" step="1" value="0" onchange="filter_param_change();" style="width: 100px" disabled/>
         <label id="INS_HNTC2_MODE.doc"></label>
     </p>
     <p>
         <label class="parameter_input_label" for="INS_HNTC2_FREQ">INS_HNTC2_FREQ</label>
-        <input id="INS_HNTC2_FREQ" name="INS_HNTC2_FREQ" type="number" step="0.1" value="0" onchange="filter_param_read(); redraw_Spectrogram();" style="width: 100px" disabled/>
+        <input id="INS_HNTC2_FREQ" name="INS_HNTC2_FREQ" type="number" step="0.1" value="0" onchange="filter_param_change();" style="width: 100px" disabled/>
     </p>
     <p>
         <label class="parameter_input_label" for="INS_HNTC2_BW">INS_HNTC2_BW</label>
-        <input id="INS_HNTC2_BW" name="INS_HNTC2_BW" type="number" step="0.1" value="0" onchange="filter_param_read(); redraw_Spectrogram();" style="width: 100px" disabled/>
+        <input id="INS_HNTC2_BW" name="INS_HNTC2_BW" type="number" step="0.1" value="0" onchange="filter_param_change();" style="width: 100px" disabled/>
     </p>
     <p>
         <label class="parameter_input_label" for="INS_HNTC2_ATT">INS_HNTC2_ATT</label>
-        <input id="INS_HNTC2_ATT" name="INS_HNTC2_ATT" type="number" step="0.1" value="0" onchange="filter_param_read(); redraw_Spectrogram();" style="width: 100px" disabled/>
+        <input id="INS_HNTC2_ATT" name="INS_HNTC2_ATT" type="number" step="0.1" value="0" onchange="filter_param_change();" style="width: 100px" disabled/>
     </p>
     <p>
         <label class="parameter_input_label" for="INS_HNTC2_REF">INS_HNTC2_REF</label>
-        <input id="INS_HNTC2_REF" name="INS_HNTC2_REF" type="number" step="0.01" value="0" onchange="filter_param_read(); redraw_Spectrogram();" style="width: 100px" disabled/>
+        <input id="INS_HNTC2_REF" name="INS_HNTC2_REF" type="number" step="0.01" value="0" onchange="filter_param_change();" style="width: 100px" disabled/>
     </p>
     <p>
         <label class="parameter_input_label" for="INS_HNTC2_FM_RAT">INS_HNTC2_FM_RAT</label>
-        <input id="INS_HNTC2_FM_RAT" name="INS_HNTC2_FM_RAT" type="number" step="0.01" value="1.0" onchange="filter_param_read(); redraw_Spectrogram();" style="width: 100px" disabled/>
+        <input id="INS_HNTC2_FM_RAT" name="INS_HNTC2_FM_RAT" type="number" step="0.01" value="1.0" onchange="filter_param_change();" style="width: 100px" disabled/>
     </p>
     <p>
         <label class="parameter_input_label" for="INS_HNTC2_HMNCS">INS_HNTC2_HMNCS</label>
-        <input id="INS_HNTC2_HMNCS" name="INS_HNTC2_HMNCS" type="number" step="1" value="1" onchange="filter_param_read(); redraw_Spectrogram();" style="width: 100px" disabled/>
+        <input id="INS_HNTC2_HMNCS" name="INS_HNTC2_HMNCS" type="number" step="1" value="1" onchange="filter_param_change();" style="width: 100px" disabled/>
         <label id="INS_HNTC2_HMNCS.doc"></label>
     </p>
     <p>
         <label class="parameter_input_label" for="INS_HNTC2_OPTS">INS_HNTC2_OPTS</label>
-        <input id="INS_HNTC2_OPTS" name="INS_HNTC2_OPTS" type="number" step="1" value="0" onchange="filter_param_read(); redraw_Spectrogram();" style="width: 100px" disabled/>
+        <input id="INS_HNTC2_OPTS" name="INS_HNTC2_OPTS" type="number" step="1" value="0" onchange="filter_param_change();" style="width: 100px" disabled/>
         <label id="INS_HNTC2_OPTS.doc"></label>
     </p>
 </fieldset>
@@ -371,10 +378,10 @@
     <tr>
         <td style="width: 60px;"></td>
         <td>
-            <fieldset style="width:300px;height:350px">
+            <fieldset style="width:350px;height:350px">
                 <legend>Spectrogram Options</legend>
                 <p>
-                    <fieldset style="width:300px">
+                    <fieldset style="width:350px">
                         <legend>Gyro instance</legend>
                         <input type="radio" id="SpecGyroInst0" name="SpecGyroInst" onchange="redraw_Spectrogram()" disabled>
                         <label for="SpecGyroInst0">1</label>
@@ -387,17 +394,20 @@
                     </fieldset>
                 </p>
                 <p>
-                    <fieldset style="width:300px">
+                    <fieldset style="width:350px">
                         <legend>Filtering</legend>
                         <input type="radio" id="SpecGyroPre" name="SpecGyroPrePost" onchange="redraw_Spectrogram()" disabled>
                         <label for="SpecGyroPre">Pre-filter</label>
 
                         <input type="radio" id="SpecGyroPost" name="SpecGyroPrePost" onchange="redraw_Spectrogram()" disabled>
                         <label for="SpecGyroPost">Post-filter</label>
+
+                        <input type="radio" id="SpecGyroEstPost" name="SpecGyroPrePost" onchange="redraw_Spectrogram()" disabled>
+                        <label for="SpecGyroEstPost">Estimated post-filter</label>
                     </fieldset>
                 </p>
                 <p>
-                    <fieldset style="width:300px">
+                    <fieldset style="width:350px">
                         <legend>Axis</legend>
                         <input type="radio" id="SpecGyroAxisX" name="SpecGyroAxis" onchange="redraw_Spectrogram()" disabled>
                         <label for="SpecGyroAxisX">X</label>
