FilterReview: fixup labels

--- a/FilterReview/index.html
+++ b/FilterReview/index.html
@@ -53,15 +53,15 @@
                         <tr>
                             <td>
                                 <input type="radio" id="freq_ScaleLinear" name="feq_scale" checked>
-                                <label for="LinearScale">Linear</label><br>
+                                <label for="freq_ScaleLinear">Linear</label><br>
                                 <input type="radio" id="freq_ScaleLog" name="feq_scale">
-                                <label for="LogScale">Log</label><br>
+                                <label for="freq_ScaleLog">Log</label><br>
                             </td>
                             <td>
                                 <input type="radio" id="freq_Scale_Hz" name="feq_unit" checked>
-                                <label for="Scale_unit_Hz">Hz</label><br>
+                                <label for="freq_Scale_Hz">Hz</label><br>
                                 <input type="radio" id="freq_Scale_RPM" name="feq_unit">
-                                <label for="Scale_unit_RPM">RPM</label><br>
+                                <label for="freq_Scale_RPM">RPM</label><br>
                             </td>
                         </tr>
                     </table>
