FitlerTool: fixup labels

--- a/FilterTool/index.html
+++ b/FilterTool/index.html
@@ -34,9 +34,9 @@ ArduPilot 4.2 filter setup.
                                 <fieldset style="width:150px">
                                         <legend>Magnitude scale</legend>
                                         <input type="radio" id="ScaleLog" name="Scale" value="Log" checked>
-                                        <label for="LogScale">dB</label><br>
+                                        <label for="ScaleLog">dB</label><br>
                                         <input type="radio" id="ScaleLinear" name="Scale" value="Linear">
-                                        <label for="LinearScale">Linear</label><br>
+                                        <label for="ScaleLinear">Linear</label><br>
                                 </fieldset>
                         </td>
                         <td>
@@ -55,15 +55,15 @@ ArduPilot 4.2 filter setup.
                                                 <tr>
                                                         <td>
                                                                 <input type="radio" id="freq_ScaleLog" name="feq_scale" value="Log" checked>
-                                                                <label for="LogScale">Log</label><br>
+                                                                <label for="freq_ScaleLog">Log</label><br>
                                                                 <input type="radio" id="freq_ScaleLinear" name="feq_scale" value="Linear">
-                                                                <label for="LinearScale">Linear</label><br>
+                                                                <label for="freq_ScaleLinear">Linear</label><br>
                                                         </td>
                                                         <td>
                                                                 <input type="radio" id="freq_Scale_Hz" name="feq_unit" value="Hz" checked>
-                                                                <label for="Scale_unit_Hz">Hz</label><br>
+                                                                <label for="freq_Scale_Hz">Hz</label><br>
                                                                 <input type="radio" id="freq_Scale_RPM" name="feq_unit" value="RPM">
-                                                                <label for="Scale_unit_RPM">RPM</label><br>
+                                                                <label for="freq_Scale_RPM">RPM</label><br>
                                                         </td>
                                                 </tr>
                                         </table>
@@ -228,18 +228,18 @@ ArduPilot 4.2 filter setup.
                                                 <fieldset style="width:150px">
                                                         <legend>Gain scale</legend>
                                                         <input type="radio" id="PID_ScaleLog" name="PID_Scale" value="Log" checked>
-                                                        <label for="LogScale">dB</label><br>
+                                                        <label for="PID_ScaleLog">dB</label><br>
                                                         <input type="radio" id="PID_ScaleLinear" name="PID_Scale" value="Linear">
-                                                        <label for="LinearScale">Linear</label><br>
+                                                        <label for="PID_ScaleLinear">Linear</label><br>
                                                 </fieldset>
                                         </td>
                                         <td>
                                                 <fieldset style="width:150px">
                                                         <legend>Phase scale</legend>
                                                         <input type="radio" id="PID_ScaleUnWrap" name="PID_PhaseScale" value="unwrap" checked>
-                                                        <label for="ScaleUnWrap">un-wrapped</label><br>
+                                                        <label for="PID_ScaleUnWrap">un-wrapped</label><br>
                                                         <input type="radio" id="PID_ScaleWrap" name="PID_PhaseScale" value="wrap">
-                                                        <label for="ScaleWrap">±180</label><br>
+                                                        <label for="PID_ScaleWrap">±180</label><br>
                                                 </fieldset>
                                         </td>
                                         <td>
@@ -249,15 +249,15 @@ ArduPilot 4.2 filter setup.
                                                                 <tr>
                                                                         <td>
                                                                                 <input type="radio" id="PID_freq_ScaleLog" name="PID_feq_scale" value="Log" checked>
-                                                                                <label for="LogScale">Log</label><br>
+                                                                                <label for="PID_freq_ScaleLog">Log</label><br>
                                                                                 <input type="radio" id="PID_freq_ScaleLinear" name="PID_feq_scale" value="Linear">
-                                                                                <label for="LinearScale">Linear</label><br>
+                                                                                <label for="PID_freq_ScaleLinear">Linear</label><br>
                                                                         </td>
                                                                         <td>
                                                                                 <input type="radio" id="PID_freq_Scale_Hz" name="PID_feq_unit" value="Hz" checked>
-                                                                                <label for="Scale_unit_Hz">Hz</label><br>
+                                                                                <label for="PID_freq_Scale_Hz">Hz</label><br>
                                                                                 <input type="radio" id="PID_freq_Scale_RPM" name="PID_feq_unit" value="RPM">
-                                                                                <label for="Scale_unit_RPM">RPM</label><br>
+                                                                                <label for="PID_freq_Scale_RPM">RPM</label><br>
                                                                         </td>
                                                                 </tr>
                                                         </table>
@@ -267,9 +267,9 @@ ArduPilot 4.2 filter setup.
                                                 <fieldset style="width:150px">
                                                         <legend>Filtering</legend>
                                                         <input type="radio" id="PID_filtering_Pre" name="filtering" value="Pre" checked>
-                                                        <label for="LogScale">Pre</label><br>
+                                                        <label for="PID_filtering_Pre">Pre</label><br>
                                                         <input type="radio" id="PID_filtering_Post" name="filtering" value="Post">
-                                                        <label for="LinearScale">Post</label><br>
+                                                        <label for="PID_filtering_Post">Post</label><br>
                                                 </fieldset>
                                         </td>
                                 </tr>
