Add github link to this repo

--- a/FilterReview/index.html
+++ b/FilterReview/index.html
@@ -10,7 +10,14 @@
 <script type="text/javascript" src="DecodeDevID.js"></script>
 
 </head>
-<a href="https://ardupilot.org"><img src="../images/ArduPilot.png"></a>
+<table style="width:1200px"><tr><td>
+    <a href="https://ardupilot.org"><img src="../images/ArduPilot.png"></a>
+</td><td>
+    <a href="https://github.com/ArduPilot/WebTools"><img src="../images/github-mark.png" style="width:60px"></a>
+    <br>
+    <a href="https://github.com/ArduPilot/WebTools"><img src="../images/GitHub_Logo.png" style="width:60px"></a>
+</td></tr></table>
+
 <h1>ArduPilot Filter Review Tool</h1>
 
 <body>
