Add github link to this repo

--- a/FilterTool/index.html
+++ b/FilterTool/index.html
@@ -10,7 +10,14 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
 <script src="https://unpkg.com/mathjs/lib/browser/math.js"></script>
 </head>
-<a href="https://ardupilot.org"><img src="../images/ArduPilot.png"></a>
+<table style="width:1200px"><tr><td>
+    <a href="https://ardupilot.org"><img src="../images/ArduPilot.png"></a>
+</td><td>
+    <a href="https://github.com/ArduPilot/WebTools"><img src="../images/GitHub-Mark.png" style="width:60px"></a>
+    <br>
+    <a href="https://github.com/ArduPilot/WebTools"><img src="../images/GitHub_Logo.png" style="width:60px"></a>
+</td></tr></table>
+
 <h1>ArduPilot Filter Analysis</h1>
 
 The following form will display the attenuation and phase lag for an
