--- a/FilterReview/index.html
+++ b/FilterReview/index.html
@@ -19,7 +19,9 @@
     <a href="https://github.com/ArduPilot/WebTools"><img src="../images/GitHub_Logo.png" style="width:60px"></a>
 </td></tr></table>
 
-<h1>ArduPilot Filter Review Tool</h1>
+<table><tr><td style="width:1200px">
+<h1 style="text-align:center">ArduPilot Filter Review Tool</h1>
+</td></tr></table>
 
 <body>
 
@@ -89,9 +91,13 @@
 </td>
 </tr>
 </table>
-<p>
-    <div id="FFTPlot" style="width:1200px;height:450px"></div>
-</p>
+
+<table><tr><td style="width:1200px">
+    <h2 style="text-align:center">IMU Spectrum</h2>
+</td></tr></table>
+
+<div id="FFTPlot" style="width:1200px;height:450px"></div>
+
 <table>
     <tr>
         <td style="width: 275px;"></td>
@@ -270,19 +276,19 @@
     </tr>
 </table>
 
-<p>
-    <div id="BodeAmp" style="width:1200px;height:450px"></div>
-</p>
-<p>
-    <div id="BodePhase" style="width:1200px;height:450px"></div>
-</p>
+<table><tr><td style="width:1200px">
+<h2 style="text-align:center">Frequency Response of Filters</h2>
+</td></tr></table>
+
+<div id="BodeAmp" style="width:1200px;height:450px"></div>
+<div id="BodePhase" style="width:1200px;height:450px"></div>
 
 <table>
 <tr>
 <td style="width: 30px;"></td>
 <td>
     <fieldset style="width:1100px">
-        <legend>Bode plot</legend>
+        <legend>Bode plot options</legend>
         <table>
             <tr>
                 <td>
@@ -337,11 +343,12 @@
                         <label for="BodeEstGyro2">Gyro 3</label>
                     </fieldset>
                 </td>
+                <td style="width: 10px;"></td>
+                <td>
+                    <input type="button" id="BodeCalculate" value="Calculate" onclick="filter_calculate()"><br><br><br>
+                </td>
             </tr>
         </table>
-        <p>
-            <input type="button" id="BodeCalculate" value="Calculate" onclick="filter_calculate()">
-        </p>
 </fieldset>
 <fieldset style="width:1100px">
     <legend>Low pass filter</legend>
@@ -449,55 +456,52 @@
 </tr>
 </table>
 
-<p>
-    <div id="Spectrogram" style="width:1200px;height:450px"></div>
-</p>
+<table><tr><td style="width:1200px">
+    <h2 style="text-align:center">IMU Spectrogram</h2>
+</td></tr></table>
+
+<div id="Spectrogram" style="width:1200px;height:450px"></div>
 
 <table>
     <tr>
-        <td style="width: 60px;"></td>
+        <td style="width: 240px;"></td>
         <td>
-            <fieldset style="width:350px;height:350px">
-                <legend>Spectrogram Options</legend>
-                <p>
-                    <fieldset style="width:350px">
-                        <legend>Gyro instance</legend>
-                        <input type="radio" id="SpecGyroInst0" name="SpecGyroInst" onchange="redraw_Spectrogram()">
-                        <label for="SpecGyroInst0">1</label>
+            <fieldset style="width:125px">
+                <legend>Gyro instance</legend>
+                <input type="radio" id="SpecGyroInst0" name="SpecGyroInst" onchange="redraw_Spectrogram()">
+                <label for="SpecGyroInst0">1</label>
 
-                        <input type="radio" id="SpecGyroInst1" name="SpecGyroInst" onchange="redraw_Spectrogram()">
-                        <label for="SpecGyroInst1">2</label>
+                <input type="radio" id="SpecGyroInst1" name="SpecGyroInst" onchange="redraw_Spectrogram()">
+                <label for="SpecGyroInst1">2</label>
 
-                        <input type="radio" id="SpecGyroInst2" name="SpecGyroInst" onchange="redraw_Spectrogram()">
-                        <label for="SpecGyroInst2">3</label>
-                    </fieldset>
-                </p>
-                <p>
-                    <fieldset style="width:350px">
-                        <legend>Filtering</legend>
-                        <input type="radio" id="SpecGyroPre" name="SpecGyroPrePost" onchange="redraw_Spectrogram()">
-                        <label for="SpecGyroPre">Pre-filter</label>
+                <input type="radio" id="SpecGyroInst2" name="SpecGyroInst" onchange="redraw_Spectrogram()">
+                <label for="SpecGyroInst2">3</label>
+            </fieldset>
+        </td>
+        <td>
+            <fieldset style="width:350px">
+                <legend>Filtering</legend>
+                <input type="radio" id="SpecGyroPre" name="SpecGyroPrePost" onchange="redraw_Spectrogram()">
+                <label for="SpecGyroPre">Pre-filter</label>
 
-                        <input type="radio" id="SpecGyroPost" name="SpecGyroPrePost" onchange="redraw_Spectrogram()">
-                        <label for="SpecGyroPost">Post-filter</label>
+                <input type="radio" id="SpecGyroPost" name="SpecGyroPrePost" onchange="redraw_Spectrogram()">
+                <label for="SpecGyroPost">Post-filter</label>
 
-                        <input type="radio" id="SpecGyroEstPost" name="SpecGyroPrePost" onchange="redraw_Spectrogram()">
-                        <label for="SpecGyroEstPost">Estimated post-filter</label>
-                    </fieldset>
-                </p>
-                <p>
-                    <fieldset style="width:350px">
-                        <legend>Axis</legend>
-                        <input type="radio" id="SpecGyroAxisX" name="SpecGyroAxis" onchange="redraw_Spectrogram()">
-                        <label for="SpecGyroAxisX">X</label>
+                <input type="radio" id="SpecGyroEstPost" name="SpecGyroPrePost" onchange="redraw_Spectrogram()">
+                <label for="SpecGyroEstPost">Estimated post-filter</label>
+            </fieldset>
+        </td>
+        <td>
+            <fieldset style="width:125px">
+                <legend>Axis</legend>
+                <input type="radio" id="SpecGyroAxisX" name="SpecGyroAxis" onchange="redraw_Spectrogram()">
+                <label for="SpecGyroAxisX">X</label>
 
-                        <input type="radio" id="SpecGyroAxisY" name="SpecGyroAxis" onchange="redraw_Spectrogram()">
-                        <label for="SpecGyroAxisY">Y</label>
+                <input type="radio" id="SpecGyroAxisY" name="SpecGyroAxis" onchange="redraw_Spectrogram()">
+                <label for="SpecGyroAxisY">Y</label>
 
-                        <input type="radio" id="SpecGyroAxisZ" name="SpecGyroAxis" onchange="redraw_Spectrogram()">
-                        <label for="SpecGyroAxisZ">Z</label>
-                    </fieldset>
-                </p>
+                <input type="radio" id="SpecGyroAxisZ" name="SpecGyroAxis" onchange="redraw_Spectrogram()">
+                <label for="SpecGyroAxisZ">Z</label>
             </fieldset>
         </td>
     </tr>
