--- a/FilterReview/index.html
+++ b/FilterReview/index.html
@@ -75,9 +75,9 @@
                 <fieldset style="width:200px;height:80px">
                     <legend>Analysis time</legend>
                     <label for="TimeStart">Start (s)</label>
-                    <input id="TimeStart" name="TimeStart" type="number" min="0" step="1" value="0" onchange="" style="width:50px"/><br><br>
+                    <input id="TimeStart" name="TimeStart" type="number" min="0" step="1" value="0" onchange="document.getElementById('calculate').disabled = false" style="width:50px"/><br><br>
                     <label for="TimeEnd">End (s)</label>
-                    <input id="TimeEnd" name="TimeEnd" type="number" min="0" step="1" value="0" onchange="" style="width:50px"/>
+                    <input id="TimeEnd" name="TimeEnd" type="number" min="0" step="1" value="0" onchange="document.getElementById('calculate').disabled = false" style="width:50px"/>
                 </fieldset>
             </td>
             <td style="width: 10px;"></td>
