FilterTool: switch over to local math lib for speedup

--- a/FilterTool/index.html
+++ b/FilterTool/index.html
@@ -5,8 +5,7 @@
 <title>ArduPilot Filter Analysis</title>
 <script type="text/javascript" src="filters.js"></script>
 <script type="text/javascript" src="FileSaver.js"></script>
-<script type="text/javascript" src={{url_for('static', filename='filters.js')}}></script>
-<script type="text/javascript" src={{url_for('static', filename='FileSaver.js')}}></script>
+<script type="text/javascript" src="../Libraries/Array_Math.js"></script>
 <script src='https://cdn.plot.ly/plotly-2.20.0.min.js'></script>
 <script src="https://unpkg.com/mathjs/lib/browser/math.js"></script>
 </head>
