FilterReview: move window size in powers of two and give alert for incorrect size

--- a/FilterReview/index.html
+++ b/FilterReview/index.html
@@ -65,7 +65,7 @@
                             </td>
                             <td>
                                 <input id="FFTWindow_per_batch" name="FFTWindow_per_batch" type="number" min="1" step="1" value="1" onchange="clear_calculation()" style="width:50px"/><br><br>
-                                <input id="FFTWindow_size" name="FFTWindow_size" type="number" min="1" step="1" value="1024" onchange="clear_calculation()" style="width:50px"/>
+                                <input id="FFTWindow_size" name="FFTWindow_size" type="number" min="1" step="1" value="1024" onchange="window_size_inc(event); clear_calculation()" style="width:50px"/>
                             </td>
                         </tr>
                     </table>
